--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -259,7 +259,7 @@
       <input
         type="text"
         name="q"
-        placeholder="Pesquise por título ou tags (AND)"
+        placeholder="Pesquise um problema mecânico"
         value="{{ termo_busca if termo_busca else '' }}"
         autocomplete="off"
       />
@@ -310,7 +310,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Plataforma M - MVP</p>
+    <p>© 2025 Plataforma M</p>
   </footer>
 </body>
 </html>
