--- a/templates/nao_resolvidos.html
+++ b/templates/nao_resolvidos.html
@@ -202,7 +202,7 @@
               <button type="submit" class="btn-resolver">Resolver</button>
             </form>
           {% else %}
-            <p><em>Faça login como Solucionador ou Mecânico para resolver este problema.</em></p>
+            <!-- Frase removida -->
           {% endif %}
 
           <!-- Botão para remover problema (somente solucionador) -->
